# StarterPack

./: README.md  pyproject.toml
src/starterpack/: __init__.py  tempconvert.py
